// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisitTypeCard matches the snapshot when active=false 1`] = `
<KeyboardProvider>
  <View
    accessibilityLabel="Video call"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": false,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDE5E1",
        "borderRadius": 24,
        "borderWidth": 3,
        "flex": 1,
        "flexDirection": "column",
        "gap": 12,
        "padding": 21,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={30}
        bbWidth={30}
        fill="none"
        focusable={false}
        height={30}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 30,
              "width": 30,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={30}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282019493,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.8}
          >
            <RNSVGRect
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="12"
              rx="2"
              width="14"
              x="2"
              y="6"
            />
            <RNSVGPath
              d="m16 10 6-3v10l-6-3z"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "borderColor": "#DDE5E1",
            "borderRadius": 15,
            "borderWidth": 3,
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#14213D",
          "fontFamily": "Figtree_700Bold",
          "fontSize": 22,
          "fontWeight": "700",
        }
      }
    >
      Video call
    </Text>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#6B7A8C",
          "fontFamily": "Figtree_400Regular",
          "fontSize": 18,
        }
      }
    >
      From home
    </Text>
  </View>
</KeyboardProvider>
`;

exports[`VisitTypeCard matches the snapshot when active=true 1`] = `
<KeyboardProvider>
  <View
    accessibilityLabel="Video call"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": true,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEF4F1",
        "borderColor": "#2F7D6D",
        "borderRadius": 24,
        "borderWidth": 3,
        "flex": 1,
        "flexDirection": "column",
        "gap": 12,
        "padding": 21,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={30}
        bbWidth={30}
        fill="none"
        focusable={false}
        height={30}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 30,
              "width": 30,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={30}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282019493,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.8}
          >
            <RNSVGRect
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="12"
              rx="2"
              width="14"
              x="2"
              y="6"
            />
            <RNSVGPath
              d="m16 10 6-3v10l-6-3z"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "borderColor": "#2F7D6D",
            "borderRadius": 15,
            "borderWidth": 9,
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#14213D",
          "fontFamily": "Figtree_700Bold",
          "fontSize": 22,
          "fontWeight": "700",
        }
      }
    >
      Video call
    </Text>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#6B7A8C",
          "fontFamily": "Figtree_400Regular",
          "fontSize": 18,
        }
      }
    >
      From home
    </Text>
  </View>
</KeyboardProvider>
`;
